# WorksOfSecondSemester

./: CMakeLists.txt  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/string/: CMakeLists.txt  string_.c  string_.h  string_test.c
libs/data_structures/string/string_predicates/: CMakeLists.txt  string_predicates.c  string_predicates.h
libs/data_structures/string/tasks/: 10_reverseOrderOfWords.c  11_printWordBeforeFirstWordWithA.c  12_lastWordInFirstStringInSecondString.c  13_areIdenticalWordsInString.c  14_areIdenticalLetterSetsInString.c  15_removeCopiesOfLastWord.c  16_getWordPrecedingStringIntersection.c  17_removeWordsWithSomeChain.c  18_fillStringWithLessWordsFromAnother.c  19_areWordLettersInString.c  1_removeNonLetters.c  2_reduceRepetitionChains.c  2_removeAdjacentEqualLetters.c  3_digitToStart.c  3b_invertAllWords.c  4_digitsToSpaces.c  5_replace.c  6_areOrderedlAphabetically.c  7_printWordsReversedOrder.c  8_countPalindromes.c  9_alternatingWords.c  CMakeLists.txt  removeNonLetters.c  string_support_functions.c
libs/data_structures/unordered_array_set/: CMakeLists.txt  unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: CMakeLists.txt  vector.c  vector.h  vector_test.c
libs/data_structures/vectorVoid/: CMakeLists.txt  vectorVoid.c  vectorVoid.h
libs/data_structures/voidVector/: CMakeLists.txt  voidVector.c  voidVector.h
(+25 files in other folders)
